almost finished fixing

--- a/cinnamon-swirl-bread-directions.html
+++ b/cinnamon-swirl-bread-directions.html
@@ -1,1 +1,9 @@
-
+<li>Place milk, eggs, butter, flour, sugar, salt, and yeast into a bread machine in the order listed, or follow the order recommended by the manufacturer if different. Run the Dough cycle, about 90 minutes.</li>
+<li>Transfer dough to a floured work surface. Punch dough to deflate and let rest for 10 minutes.</li>
+<li>Meanwhile, make the filling: Mix walnuts, brown sugar, and cinnamon together in a bowl.</li>
+<li>Divide dough in half; roll each half into a 9x14-inch rectangle. Spread each rectangle with 1 tablespoon butter and sprinkle with 1/2 of the walnut mixture. Starting at the shorter end, roll each rectangle over 
+filling and pinch seams to close.</li>
+<li>Grease two 9x5-inch loaf pans. Fit the rolled loaves into the loaf pans with the seams facing down. Cover and let rise until nearly doubled in volume, about 30 minutes.</li>
+<li>Preheat the oven to 350 degrees F (175 degrees C).</li>
+<li>Bake in the preheated oven until tops are golden brown and loaves sound hollow when tapped, about 30 minutes, covering with foil the last 10 minutes if they brown too quickly.</li>
+<li>Remove from the oven and let cool in the pans for 10 minutes before removing to a wire rack to finish cooling. Dust loaves with confectioners' sugar.</li>
