--- a/cinnamon-swirl-bread-ingredients.html
+++ b/cinnamon-swirl-bread-ingredients.html
@@ -1,1 +1,14 @@
-
+<li>DOUGH</li>
+<li>1 cup milk</li>
+<li>2 large eggs</li>
+<li>¼ cup unsalted butter, softened</li>
+<li>4 cups bread flour</li>
+<li>¼ cup white sugar</li>
+<li>1 teaspoon salt</li>
+<li>1 ½ teaspoons active dry yeast</li>
+<li>FILLING AND TOPPING</li>
+<li>½ cup chopped walnuts</li>
+<li>½ cup packed brown sugar</li>
+<li>2 teaspoons ground cinnamon</li>
+<li>2 tablespoons unsalted butter, softened</li>
+<li>2 teaspoons sifted confectioners' sugar, divided (Optional)</li>
