--- a/cristo-ingredients.html
+++ b/cristo-ingredients.html
@@ -1,1 +1,12 @@
-
+<li>1 quart oil for frying, or as needed</li>
+<li>⅔ cup water</li>
+<li>1 egg</li>
+<li>⅔ cup all-purpose flour</li>
+<li>1 ¾ teaspoons baking powder</li>
+<li>½ teaspoon salt</li>
+<li>8 slices white bread</li>
+<li>4 slices Swiss cheese</li>
+<li>4 slices turkey</li>
+<li>4 slices ham</li>
+<li>⅛ teaspoon ground black pepper</li>
+<li>1 tablespoon confectioners' sugar for dusting</li>
