--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- meta tags and title -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>tp 7</title>
+  <title>food and bread website</title>
 
   <!-- external and on-page CSS goes here -->
   <link rel="stylesheet" href="styles.css" media="all">
@@ -23,13 +23,28 @@
 </head>
 
 <body>
-
-  <div id="nav" class="nav">
-    <a href="#" id="firstRecipe">Garlic Bread</a>
-    <a href="#" id="secondRecipe">Peach Crisp</a>
-    <a href="#" id="thirdRecipe">Lemon Panko Crusted Salmon</a>
-    <a href="#" id="credits">Credits</a>
-    <a href="#" id="about">About</a>
+<!--id="nav" class="nav" -->
+  <div class="dropdown">
+    <button class="dropbtn">Recipes</button>
+    <div class="dropdown-content">
+      <a href="#" id="firstRecipe">Garlic Bread</a> <!--  -->
+      <a href="#" id="secondRecipe">Peach Crisp</a> <!--  -->
+      <a href="#" id="thirdRecipe">Lemon Panko Crusted Salmon</a> <!--  -->
+      <a href="#" id="forthRecipe">White Bread</a> <!-- https://www.allrecipes.com/recipes/17703/bread/bread-machine/white-bread/ -->
+      <a href="#" id="fifthRecipe">Sweet Bread</a> <!-- https://www.allrecipes.com/recipes/17707/bread/bread-machine/sweet-bread/ -->
+      <a href="#" id="sixthRecipe">Wheat Bread</a> <!-- https://www.allrecipes.com/recipes/17705/bread/bread-machine/wheat-bread/ -->
+      <a href="#" id="seventhRecipe">Cinnamon Swirl Bread</a> <!-- https://www.allrecipes.com/recipe/228525/cinnamon-swirl-bread-for-the-bread-machine/ -->
+      <a href="#" id="8Recipe">Italian Bread</a> <!-- https://www.allrecipes.com/recipe/22823/italian-bread-using-a-bread-machine/ -->
+      <a href="#" id="9Recipe">Monkey Bread</a> <!-- https://www.allrecipes.com/recipe/6864/monkey-bread-ii/ -->
+      <a href="#" id="10Recipe">Reuben Sandwich</a> <!-- https://www.allrecipes.com/recipe/47717/reuben-sandwich-ii/ -->
+      <a href="#" id="11Recipe">Grilled Cheese Sandwichad</a> <!-- https://www.allrecipes.com/recipe/23891/grilled-cheese-sandwich/ -->
+      <a href="#" id="12RecipeRecipe">Monte Cristo Sandwich</a> <!-- https://www.allrecipes.com/recipe/55409/monte-cristo-sandwich-the-real-one/ -->
+      <a href="#" id="13RecipeRecipe">Cinnamon Roll Pancakes</a> <!-- https://www.allrecipes.com/recipe/244767/cinnamon-roll-pancakes/ -->
+      <a href="#" id="14RecipeRecipe">Cinnamon Rolls</a> <!-- https://www.allrecipes.com/article/forming-and-baking-cinnamon-rolls/ -->
+      <a href="#" id="15RecipeRecipe">Cinnamon Toast</a> <!-- https://www.allrecipes.com/recipe/52688/cinnamon-toast/ -->
+    </div>
+    <!--<a href="#" id="credits">Credits</a>-->
+    <!--<a href="#" id="about">About</a>-->
   </div>
 
   <div id="titleBanner">
@@ -77,12 +92,12 @@
   </div>
   <!--recipe columns-->
   
-  <div>
+  <!--<div>
     <h2>Recommended Recipes</h2>
     <img id="imagees" src="garlicbread.png" alt="Garlic Bread Recipe" href="https://www.allrecipes.com/recipe/21080/great-garlic-bread/">
     <img id="imagees" src="lemon.png" alt="Peach Crisp Recipe" href="https://www.allrecipes.com/recipe/38302/peach-crisp-iii/">
     <img id="imagees" src="peach.png" alt="Lemon Panko Crusted Salmon" href="https://www.allrecipes.com/recipe/233683/lemon-panko-crusted-salmon/">
-  </div>
+  </div>-->
 
 
   <div id="footer">
