--- a/monkey-bread-directions.html
+++ b/monkey-bread-directions.html
@@ -1,1 +1,16 @@
-
+<li>Remove the baking pan from the machine. Place yeast, flour, cinnamon, 
+salt, white sugar, 2 tablespoons margarine, and water in the order recommended 
+for the bread machine. Make sure that no liquid comes in contact with yeast. 
+Select dough cycle and press start.</li>
+<li>Transfer dough to a floured surface; knead 10 to 12 times. Set aside to rest.</li>
+<li>Melt 1 cup margarine in a medium saucepan over low heat. Stir in brown sugar 
+and raisins until smooth. Remove from heat.</li>
+<li>Preheat the oven to 375 degrees F (190 degrees C). Grease a Bundt or tube pan.</li>
+<li>Cut dough into 1-inch chunks. Drop a chunk at a time into brown sugar mixture to 
+thoroughly coat. Layer dough pieces loosely in the prepared pan, staggering layers, 
+so you're plopping each dough chunk over a space between two below. Let rise in a warm, 
+draft-free spot until dough is just over the top of the pan, 15 to 20 minutes.</li>
+<li>Bake in the preheated oven until golden brown, 20 to 25 minutes.</li>
+<li>Remove from the oven and cover the pan with a plate. Holding the plate and 
+the pan with oven mitts, flip over both until bread slides out onto the plate. 
+Serve warm.</li>
