--- a/pancake-ingredients.html
+++ b/pancake-ingredients.html
@@ -1,1 +1,21 @@
-
+<li></li>PANCAKES
+<li>¾ cup milk</li>
+<li>2 tablespoons white distilled vinegar</li>
+<li>1 cup all-purpose flour</li>
+<li>2 tablespoons white sugar</li>
+<li>1 teaspoon baking powder</li>
+<li>½ teaspoon baking soda</li>
+<li>½ teaspoon salt</li>
+<li>1 large egg2 tablespoons butter, melted</li>
+<li>2 tablespoons butter, melted</li>
+<li>1 ½ teaspoons vanilla extract</li>
+<li>CINNAMON SWIRL FILLING</li>
+<li>5 ½ tablespoons packed brown sugar</li>
+<li>¼ cup butter, melted</li>
+<li>1 ½ teaspoons ground cinnamon</li>
+<li>CREAM CHEESE ICING</li>
+<li>¼ cup butter, softened</li>
+<li>2 ounces cream cheese, at room temperature</li>
+<li>¾ cup confectioners' sugar</li>
+<li>½ teaspoon vanilla extract</li>
+<li>cooking spray</li>
