--- a/reuben-directions.html
+++ b/reuben-directions.html
@@ -1,1 +1,5 @@
-
+<li>Spread the dressing on one side of each slice of bread.</li>
+<li>Assemble the sandwiches. Butter the top of each sandwich.</li>
+<li>Place the sandwich butter-side down on the hot skillet or griddle.</li>
+<li>Butter the other side. Flip when the bottom slice is golden brown.</li>
+<li>Grill until both sides are golden brown.</li>
