--- a/sweet-bread-ingredients.html
+++ b/sweet-bread-ingredients.html
@@ -1,1 +1,8 @@
-
+<li>1 cup milk</li>
+<li>⅓ cup white sugar</li>
+<li>1 tablespoon active dry yeast</li>
+<li>4 cups all-purpose flour</li>
+<li>½ teaspoon salt</li>
+<li>⅓ cup unsalted butter, softened</li>
+<li>2 large eggs</li>
+<li>2 tablespoons vegetable oil, divided, or as needed</li>
