--- a/toast-directions.html
+++ b/toast-directions.html
@@ -1,1 +1,2 @@
-
+<li>Toast bread slices in a toaster to desired darkness. Spread butter or margarine onto one side of each slice.</li>
+<li>Stir together sugar and cinnamon in a small bowl; sprinkle generously over hot, buttered toast.</li>
