--- a/toast-ingredients.html
+++ b/toast-ingredients.html
@@ -1,1 +1,4 @@
-
+<li>2 slices white bread</li>
+<li>2 teaspoons butter or margarine</li>
+<li>2 tablespoons white sugar</li>
+<li>1 teaspoon ground cinnamon</li>
