--- a/white-bread-directions.html
+++ b/white-bread-directions.html
@@ -1,1 +1,4 @@
-
+<!-- https://www.allrecipes.com/recipes/17703/bread/bread-machine/white-bread/ -->
+<li>Place water, sugar, oil, salt, bread flour, and yeast into the pan of the bread machine (or in the order recommended by your bread machine manufacturer).</li>
+<li>Bake on White Bread setting.</li>
+<li>Use oven mitts to carefully remove the bread pan from the machine. Remove bread from the pan and let cool completely on a wire rack before slicing.</li>
