--- a/white-bread-ingredients.html
+++ b/white-bread-ingredients.html
@@ -1,1 +1,6 @@
-
+<li>1 cup warm water (110 degrees F/45 degrees C)</li>
+<li>3 tablespoons white sugar</li>
+<li>3 tablespoons vegetable oil</li>
+<li>1 ½ teaspoons salt</li>
+<li>3 cups bread flour</li>
+<li>2 ¼ teaspoons active dry yeast</li>
