--- a/italion-bread-ingredients.html
+++ b/italion-bread-ingredients.html
@@ -1,1 +1,9 @@
-
+<li>1 ⅓ cups warm water (110 degrees F/45 degrees C)</li>
+<li>1 ½ teaspoons olive oil</li>
+<li>4 cups unbleached all-purpose flour</li>
+<li>1 tablespoon light brown sugar</li>
+<li>1 ½ teaspoons salt</li>
+<li>1 (.25 ounce) package active dry yeast</li>
+<li>2 tablespoons cornmeal</li>
+<li>1 large egg</li>
+<li>1 tablespoon water</li>
