--- a/monkey-bread-ingredients.html
+++ b/monkey-bread-ingredients.html
@@ -1,1 +1,10 @@
-
+<li>2 ½ teaspoons active dry yeast</li>
+<li>3 cups all-purpose flour</li>
+<li>1 teaspoon ground cinnamon</li>
+<li>1 teaspoon salt</li>
+<li>¼ cup white sugar</li>
+<li>2 tablespoons margarine, softened</li>
+<li>1 cup water</li>
+<li>1 cup margarine</li>
+<li>1 cup packed brown sugar</li>
+<li>1 cup raisins</li>
