--- a/reuben-ingredients.html
+++ b/reuben-ingredients.html
@@ -1,1 +1,6 @@
-
+<li>8 slices rye bread</li>
+<li>½ cup Thousand Island dressing</li>
+<li>8 slices Swiss cheese</li>
+<li>8 slices deli sliced corned beef</li>
+<li>1 cup sauerkraut, drained</li>
+<li>2 tablespoons butter, softened</li>
