--- a/wheat-bread-ingredients.html
+++ b/wheat-bread-ingredients.html
@@ -1,1 +1,9 @@
-
+<li>1 ½ cups warm water (110 degrees F/45 degrees C)</li>
+<li>1 tablespoon brown sugar</li>
+<li>2 (.25 ounce) envelopes active dry yeast</li>
+<li>2 cups all-purpose flour4 cups whole wheat flour</li>
+<li>4 cups whole wheat flour</li>
+<li>⅓ cup packed brown sugar</li>
+<li>2 teaspoons salt</li>
+<li>⅓ cup vegetable oil</li>
+<li>½ cup milk, room temperature</li>
