--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
       <a href="#" id="fifthRecipe">Sweet Bread</a> <!-- https://www.allrecipes.com/recipes/17707/bread/bread-machine/sweet-bread/ -->
       <a href="#" id="sixthRecipe">Wheat Bread</a> <!-- https://www.allrecipes.com/recipes/17705/bread/bread-machine/wheat-bread/ -->
       <a href="#" id="seventhRecipe">Cinnamon Swirl Bread</a> <!-- https://www.allrecipes.com/recipe/228525/cinnamon-swirl-bread-for-the-bread-machine/ -->
-      <a href="#" id="8Recipe">Italian Bread</a> <!-- https://www.allrecipes.com/recipe/22823/italian-bread-using-a-bread-machine/ -->
-      <a href="#" id="9Recipe">Monkey Bread</a> <!-- https://www.allrecipes.com/recipe/6864/monkey-bread-ii/ -->
-      <a href="#" id="10Recipe">Reuben Sandwich</a> <!-- https://www.allrecipes.com/recipe/47717/reuben-sandwich-ii/ -->
-      <a href="#" id="11Recipe">Grilled Cheese Sandwichad</a> <!-- https://www.allrecipes.com/recipe/23891/grilled-cheese-sandwich/ -->
-      <a href="#" id="12RecipeRecipe">Monte Cristo Sandwich</a> <!-- https://www.allrecipes.com/recipe/55409/monte-cristo-sandwich-the-real-one/ -->
-      <a href="#" id="13RecipeRecipe">Cinnamon Roll Pancakes</a> <!-- https://www.allrecipes.com/recipe/244767/cinnamon-roll-pancakes/ -->
-      <a href="#" id="14RecipeRecipe">Cinnamon Rolls</a> <!-- https://www.allrecipes.com/article/forming-and-baking-cinnamon-rolls/ -->
-      <a href="#" id="15RecipeRecipe">Cinnamon Toast</a> <!-- https://www.allrecipes.com/recipe/52688/cinnamon-toast/ -->
+      <a href="#" id="eighthRecipe">Italian Bread</a> <!-- https://www.allrecipes.com/recipe/22823/italian-bread-using-a-bread-machine/ -->
+      <a href="#" id="ninthRecipe">Monkey Bread</a> <!-- https://www.allrecipes.com/recipe/6864/monkey-bread-ii/ -->
+      <a href="#" id="tenthRecipe">Reuben Sandwich</a> <!-- https://www.allrecipes.com/recipe/47717/reuben-sandwich-ii/ -->
+      <a href="#" id="elevenRecipe">Grilled Cheese Sandwichad</a> <!-- https://www.allrecipes.com/recipe/23891/grilled-cheese-sandwich/ -->
+      <a href="#" id="twelveRecipeRecipe">Monte Cristo Sandwich</a> <!-- https://www.allrecipes.com/recipe/55409/monte-cristo-sandwich-the-real-one/ -->
+      <a href="#" id="thirteenRecipeRecipe">Cinnamon Roll Pancakes</a> <!-- https://www.allrecipes.com/recipe/244767/cinnamon-roll-pancakes/ -->
+      <a href="#" id="fourteenRecipeRecipe">Cinnamon Rolls</a> <!-- https://www.allrecipes.com/article/forming-and-baking-cinnamon-rolls/ -->
+      <a href="#" id="fifteenRecipeRecipe">Cinnamon Toast</a> <!-- https://www.allrecipes.com/recipe/52688/cinnamon-toast/ -->
+      <a href="credits.html" id="credits">Credits</a>
     </div>
-    <!--<a href="#" id="credits">Credits</a>-->
     <!--<a href="#" id="about">About</a>-->
   </div>
 
